--- a/tictactoe-starter-code/index.html
+++ b/tictactoe-starter-code/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <title>Sparta - TicTacToe</title>
   <link rel="stylesheet" href="style.css">
+  <script
+  src="https://code.jquery.com/jquery-3.4.0.min.js"
+  integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg="
+  crossorigin="anonymous"></script>
   <script src = "script.js" async></script>
 </head>
 <body>
